--- a/package.json
+++ b/package.json
@@ -13,28 +13,46 @@
     "type-check": "tsc --noEmit"
   },
   "dependencies": {
+    "@dnd-kit/core": "^6.3.1",
+    "@dnd-kit/sortable": "^10.0.0",
     "@headlessui/react": "^2.2.4",
     "@heroicons/react": "^2.2.0",
     "@reduxjs/toolkit": "^2.8.2",
+    "@xyflow/react": "^12.8.2",
     "bcryptjs": "^3.0.2",
     "clsx": "^2.1.1",
     "cookie": "^1.0.2",
+    "date-fns": "^4.1.0",
+    "framer-motion": "^12.23.3",
+    "html2canvas": "^1.4.1",
     "isomorphic-dompurify": "^2.26.0",
     "jose": "^6.0.11",
     "jsonwebtoken": "^9.0.2",
+    "jspdf": "^3.0.1",
+    "lucide-react": "^0.525.0",
+    "mqtt": "^5.13.2",
     "next": "15.3.5",
     "next-themes": "^0.4.6",
     "react": "^19.0.0",
+    "react-color": "^2.19.3",
     "react-dom": "^19.0.0",
     "react-redux": "^9.2.0",
+    "react-slider": "^2.0.6",
+    "react-spring": "^10.0.1",
+    "react-use-gesture": "^9.1.3",
+    "react-virtualized": "^9.22.6",
+    "recharts": "^3.1.0",
     "redux-persist": "^6.0.0",
+    "socket.io-client": "^4.8.1",
     "tailwind-merge": "^3.3.1",
     "zod": "^3.25.76"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
+    "@testing-library/dom": "^10.4.0",
     "@testing-library/jest-dom": "^6.6.3",
     "@testing-library/react": "^16.3.0",
+    "@testing-library/user-event": "^14.6.1",
     "@types/bcryptjs": "^3.0.0",
     "@types/cookie": "^1.0.0",
     "@types/jest": "^30.0.0",
