--- a/package.json
+++ b/package.json
@@ -56,6 +56,7 @@
     "@types/bcryptjs": "^3.0.0",
     "@types/cookie": "^1.0.0",
     "@types/jest": "^30.0.0",
+    "@types/jest-axe": "^3.5.9",
     "@types/jsonwebtoken": "^9.0.10",
     "@types/node": "^20",
     "@types/react": "^19",
@@ -65,6 +66,7 @@
     "eslint": "^9",
     "eslint-config-next": "15.3.5",
     "jest": "^30.0.4",
+    "jest-axe": "^10.0.0",
     "jest-environment-jsdom": "^30.0.4",
     "tailwindcss": "^3.4.0",
     "typescript": "^5"
