--- a/package.json
+++ b/package.json
@@ -18,8 +18,10 @@
     "@headlessui/react": "^2.2.4",
     "@heroicons/react": "^2.2.0",
     "@reduxjs/toolkit": "^2.8.2",
+    "@tanstack/react-table": "^8.21.3",
     "@xyflow/react": "^12.8.2",
     "bcryptjs": "^3.0.2",
+    "chart.js": "^4.5.0",
     "clsx": "^2.1.1",
     "cookie": "^1.0.2",
     "date-fns": "^4.1.0",
@@ -34,9 +36,13 @@
     "next": "15.3.5",
     "next-themes": "^0.4.6",
     "react": "^19.0.0",
+    "react-chartjs-2": "^5.3.0",
     "react-color": "^2.19.3",
     "react-dom": "^19.0.0",
+    "react-hook-form": "^7.60.0",
+    "react-intersection-observer": "^9.5.0",
     "react-redux": "^9.2.0",
+    "react-select": "^5.10.2",
     "react-slider": "^2.0.6",
     "react-spring": "^10.0.1",
     "react-use-gesture": "^9.1.3",
@@ -45,6 +51,7 @@
     "redux-persist": "^6.0.0",
     "socket.io-client": "^4.8.1",
     "tailwind-merge": "^3.3.1",
+    "xlsx": "^0.18.5",
     "zod": "^3.25.76"
   },
   "devDependencies": {
